2007-11-02  Yevgen Muntyan  <muntyan@tamu.edu>

	Get styles mappings from def.lang when parsing version 1 lang files.

	* gtksourceview/gtksourcelanguage-private.h: new field in
	GtkSourceLanguagePrivate: 'styles_loaded', to avoid reloading
	lang file if styles are already there.
	* gtksourceview/gtksourcelanguage.c:
	(_gtk_source_language_define_language_styles): parse def.lang to get
	default styles mapping;
	(gtk_source_language_parse_file): new function, to be used in
	_gtk_source_language_create_engine and force_styles.
	* gtksourceview/language-specs/def.lang: added dummy def:def context
	needed in force_styles().

2007-10-24  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/po.lang: highlight C and Python strings,
	XML tags, and mnemonics in a special way.
	Patch by Ignacio Casal Quinteiro (#485519).

2007-10-24  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/gtk-doc.lang: require trailing
	colon after a function/signal/property name (#489736).

2007-10-21  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/fortran.lang: fortran in not case
	sensitive. Patch by John Spray.

2007-10-15  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/latex.lang: highlight \[\] and \(\).

2007-10-14  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.c: do not use gtk_text_view_get_buffer
	because it causes the buffer to be recreated.

2007-10-12  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/sh.lang: there is no escaping in
	single-quoted strings.

2007-10-12  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c (gtk_source_context_engine_attach_buffer),
	(_gtk_source_context_data_finish_parse): check main context in finish_parse(),
	so it doesn't crash later. Fixes #485661 (Mildred).

2007-10-03  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/csharp.lang: add 'partial' keyword.
